--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
   text-align: center;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  background:#80808033;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*Para Las Listas de paises*/
+ul {
+  list-style-type:none;
+  color: #363636;
+  font-weight: bold;
+  background:#80808033;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.flex-container {
+   display: flex;
+   flex-flow: row wrap;
+   padding: 0;
+   margin: 0;
+   list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.flex-item {
+  padding: 5px;
+  width: 250px;
+  height: 150px;
+  margin-top: 10px;
+  line-height: 150px;
   color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.flex-search {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.flex-itemsearch {
+   width: 80%;
+   padding: 5px;  
+   color: white;
+   font-weight: bold;
+   font-size: 3em;
+   text-align: center;
+ }
